fleet/homol/patches/statefulset-homol-stateless.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: n8n-main
  namespace: n8n-homol
spec:
  replicas: 1
  volumeClaimTemplates: []   # remove PVC
  template:
    spec:
      volumes: null          # remove volumes
      containers:
        - name: n8n
          envFrom: null      # remove secrets de prod
          volumeMounts: null # remove montagem de PVC
