fleet/homol/patches/ingress-homol.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: n8n-homol
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - n8n-homol.129.213.28.76.sslip.io
      secretName: n8n-homol-tls
  rules:
    - host: n8n-homol.129.213.28.76.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 5678
